--- a/index.html
+++ b/index.html
@@ -30,14 +30,18 @@
   <b-button icon="settings">
     提交
   </b-button>
-  <b-button icon="download" icon-position="right">
+  <b-button icon="download1" icon-position="right">
+    下载
+  </b-button>
+  <b-button icon="download2" icon-position="right">
+    下载
+  </b-button>
+  <b-button>
     提交
   </b-button>
-  <b-button icon="down">
-    提交
-  </b-button>
+  <b-icon name="settings"></b-icon>
 </div>
 <script src="./src/app.js"></script>
-<script src="//at.alicdn.com/t/font_860479_nnem9z1789.js"></script>
+<script src="//at.alicdn.com/t/font_860479_joab3tmsfvg.js"></script>
 </body>
 </html>
