--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <b-button icon="download1" icon-position="right">
     下载
   </b-button>
-  <b-button icon="download2" icon-position="right">
+  <b-button icon="loading" icon-position="right">
     下载
   </b-button>
   <b-button>
