--- a/index.html
+++ b/index.html
@@ -27,21 +27,29 @@
 </head>
 <body>
 <div id="app">
-  <b-button icon="down">
-    提交
-  </b-button>
-  <b-button icon="download" :loading="loading1" @click="loading1 = !loading1" icon-position="right">
-    下载
-  </b-button>
-  <b-button>
-    提交
-  </b-button>
-  <b-icon name="settings"></b-icon>
-  <b-button-group>
-    <b-button icon="left">上一页</b-button>
-    <b-button>更多</b-button>
-    <b-button icon="right" icon-position="right">下一页</b-button>
-  </b-button-group>
+  <div style="margin: 10px;">
+    <b-input value="康康" disabled></b-input>
+    <b-input value="jj" readonly></b-input>
+    <b-input value="1223" error="急急急j 98796"></b-input>
+    <b-input></b-input>
+  </div>
+  <div>
+    <b-button icon="down">
+      提交
+    </b-button>
+    <b-button icon="download" :loading="loading1" @click="loading1 = !loading1" icon-position="right">
+      下载
+    </b-button>
+    <b-button>
+      提交
+    </b-button>
+    <b-icon name="settings"></b-icon>
+    <b-button-group>
+      <b-button icon="left">上一页</b-button>
+      <b-button>更多</b-button>
+      <b-button icon="right" icon-position="right">下一页</b-button>
+    </b-button-group>
+  </div>
 </div>
 <script src="./src/app.js"></script>
 </body>
