添加input组件的测试用例

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <b-input value="康康" disabled></b-input>
     <b-input value="jj" readonly></b-input>
     <b-input value="1223" error="急急急j 98796"></b-input>
-    <b-input></b-input>
+    <b-input @change="aaa" @input="bbb" @focus="ccc" @blur="ddd"></b-input>
   </div>
   <div>
     <b-button icon="down">
