让 input 支持 v-model

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <b-input value="jj" readonly></b-input>
     <b-input value="1223" error="急急急j 98796"></b-input>
     <b-input @change="aaa" @input="bbb" @focus="ccc" @blur="ddd"></b-input>
+    <b-input v-model="val"></b-input>
+    <p>{{val}}</p>
   </div>
   <div>
     <b-button icon="down">
