添加网格布局 col 和 row 组件并添加样式

--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
 </head>
 <body>
 <div id="app">
+  <div style="margin: 20px;">
+    <b-row>
+      <b-col span="2"></b-col>
+      <b-col span="22"></b-col>
+    </b-row>
+    <b-row>
+      <b-col></b-col>
+      <b-col></b-col>
+      <b-col></b-col>
+    </b-row>
+    <b-row>
+      <b-col></b-col>
+    </b-row>
+    <b-row>
+      <b-col></b-col>
+      <b-col></b-col>
+      <b-col></b-col>
+      <b-col></b-col>
+    </b-row>
+  </div>
   <div style="margin: 10px;">
     <b-input value="康康" disabled></b-input>
     <b-input value="jj" readonly></b-input>
