网格布局 增加 offset 和 gutter

--- a/index.html
+++ b/index.html
@@ -28,23 +28,29 @@
 <body>
 <div id="app">
   <div style="margin: 20px;">
+    <b-row gutter="40">
+      <b-col span="6"></b-col>
+      <b-col span="18"></b-col>
+    </b-row>
     <b-row>
+      <b-col span="4"></b-col>
+      <b-col span="6"></b-col>
+      <b-col span="10" offset="4"></b-col>
+    </b-row>
+    <b-row>
+      <b-col span="4"></b-col>
+      <b-col span="6"></b-col>
+      <b-col span="10" offset="4"></b-col>
+    </b-row>
+    <b-row>
+      <b-col></b-col>
+    </b-row>
+    <b-row gutter="20">
       <b-col span="2"></b-col>
-      <b-col span="22"></b-col>
-    </b-row>
-    <b-row>
-      <b-col></b-col>
-      <b-col></b-col>
-      <b-col></b-col>
-    </b-row>
-    <b-row>
-      <b-col></b-col>
-    </b-row>
-    <b-row>
-      <b-col></b-col>
-      <b-col></b-col>
-      <b-col></b-col>
-      <b-col></b-col>
+      <b-col span="2"></b-col>
+      <b-col span="7"></b-col>
+      <b-col span="1"></b-col>
+      <b-col span="10" offset="2"></b-col>
     </b-row>
   </div>
   <div style="margin: 10px;">
