--- a/index.html
+++ b/index.html
@@ -28,29 +28,29 @@
 <body>
 <div id="app">
   <div style="margin: 20px;">
-    <b-row gutter="40">
-      <b-col span="6"></b-col>
-      <b-col span="18"></b-col>
-    </b-row>
-    <b-row>
-      <b-col span="4"></b-col>
-      <b-col span="6"></b-col>
-      <b-col span="10" offset="4"></b-col>
-    </b-row>
-    <b-row>
-      <b-col span="4"></b-col>
-      <b-col span="6"></b-col>
-      <b-col span="10" offset="4"></b-col>
-    </b-row>
-    <b-row>
-      <b-col></b-col>
+    <b-row gutter="20">
+      <b-col span="6">1</b-col>
+      <b-col span="18">1</b-col>
     </b-row>
     <b-row gutter="20">
-      <b-col span="2"></b-col>
-      <b-col span="2"></b-col>
-      <b-col span="7"></b-col>
-      <b-col span="1"></b-col>
-      <b-col span="10" offset="2"></b-col>
+      <b-col span="4">1</b-col>
+      <b-col span="6">1</b-col>
+      <b-col span="10" offset="4">1</b-col>
+    </b-row>
+    <b-row gutter="20">
+      <b-col span="4">1</b-col>
+      <b-col span="6">1</b-col>
+      <b-col span="10" offset="4">1</b-col>
+    </b-row>
+    <b-row>
+      <b-col>1</b-col>
+    </b-row>
+    <b-row gutter="20">
+      <b-col span="2">1</b-col>
+      <b-col span="2">1</b-col>
+      <b-col span="7">1</b-col>
+      <b-col span="1">1</b-col>
+      <b-col span="10" offset="2">1</b-col>
     </b-row>
   </div>
   <div style="margin: 10px;">
