网格布局 添加对齐方式 align

--- a/index.html
+++ b/index.html
@@ -29,8 +29,20 @@
 <div id="app">
   <div style="margin: 20px;">
     <b-row gutter="20">
-      <b-col span="6">1</b-col>
-      <b-col span="18">1</b-col>
+      <b-col span="6">
+        <b-row gutter="20" align="right">
+          <b-col>1</b-col>
+          <b-col>1</b-col>
+          <b-col>1</b-col>
+        </b-row>
+      </b-col>
+      <b-col span="18">
+        <b-row gutter="20" align="center">
+          <b-col>1</b-col>
+          <b-col>1</b-col>
+          <b-col>1</b-col>
+        </b-row>
+      </b-col>
     </b-row>
     <b-row gutter="20">
       <b-col span="4">1</b-col>
