--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
 <body>
 <div id="app">
   <div style="margin: 20px;">
+    <!--<b-row gutter="20">-->
+      <!--<b-col span="6">-->
+        <!--<b-row gutter="20" align="right">-->
+          <!--<b-col>1</b-col>-->
+          <!--<b-col>1</b-col>-->
+          <!--<b-col>1</b-col>-->
+        <!--</b-row>-->
+      <!--</b-col>-->
+      <!--<b-col span="18">-->
+        <!--<b-row gutter="20" align="center">-->
+          <!--<b-col>1</b-col>-->
+          <!--<b-col>1</b-col>-->
+          <!--<b-col>1</b-col>-->
+        <!--</b-row>-->
+      <!--</b-col>-->
+    <!--</b-row>-->
     <b-row gutter="20">
-      <b-col span="6">
-        <b-row gutter="20" align="right">
-          <b-col>1</b-col>
-          <b-col>1</b-col>
-          <b-col>1</b-col>
-        </b-row>
-      </b-col>
-      <b-col span="18">
-        <b-row gutter="20" align="center">
-          <b-col>1</b-col>
-          <b-col>1</b-col>
-          <b-col>1</b-col>
-        </b-row>
-      </b-col>
+      <b-col span="4" :xs="{span: 2}" :sm="{span: 10}">1</b-col>
+      <b-col span="6" :xs="{span: 20}" :sm="{span: 4}">1</b-col>
+      <b-col span="10" :xs="{span: 2}" :sm="{span: 10}">1</b-col>
     </b-row>
-    <b-row gutter="20">
-      <b-col span="4">1</b-col>
-      <b-col span="6">1</b-col>
-      <b-col span="10" offset="4">1</b-col>
-    </b-row>
-    <b-row gutter="20">
-      <b-col span="4">1</b-col>
-      <b-col span="6">1</b-col>
-      <b-col span="10" offset="4">1</b-col>
-    </b-row>
-    <b-row>
-      <b-col>1</b-col>
-    </b-row>
-    <b-row gutter="20">
-      <b-col span="2">1</b-col>
-      <b-col span="2">1</b-col>
-      <b-col span="7">1</b-col>
-      <b-col span="1">1</b-col>
-      <b-col span="10" offset="2">1</b-col>
-    </b-row>
+    <!--<b-row gutter="20">-->
+      <!--<b-col span="4">1</b-col>-->
+      <!--<b-col span="6">1</b-col>-->
+      <!--<b-col span="10" offset="4">1</b-col>-->
+    <!--</b-row>-->
+    <!--<b-row>-->
+      <!--<b-col>1</b-col>-->
+    <!--</b-row>-->
+    <!--<b-row gutter="20">-->
+      <!--<b-col span="2">1</b-col>-->
+      <!--<b-col span="2">1</b-col>-->
+      <!--<b-col span="7">1</b-col>-->
+      <!--<b-col span="1">1</b-col>-->
+      <!--<b-col span="10" offset="2">1</b-col>-->
+    <!--</b-row>-->
   </div>
   <div style="margin: 10px;">
     <b-input value="康康" disabled></b-input>
