toast 添加 toast 组件 并添加基本样式

--- a/index.html
+++ b/index.html
@@ -27,79 +27,7 @@
 </head>
 <body>
 <div id="app">
-  <!--<div style="margin: 20px;">-->
-    <!--&lt;!&ndash;<b-row gutter="20">&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="6">&ndash;&gt;-->
-        <!--&lt;!&ndash;<b-row gutter="20" align="right">&ndash;&gt;-->
-          <!--&lt;!&ndash;<b-col>1</b-col>&ndash;&gt;-->
-          <!--&lt;!&ndash;<b-col>1</b-col>&ndash;&gt;-->
-          <!--&lt;!&ndash;<b-col>1</b-col>&ndash;&gt;-->
-        <!--&lt;!&ndash;</b-row>&ndash;&gt;-->
-      <!--&lt;!&ndash;</b-col>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="18">&ndash;&gt;-->
-        <!--&lt;!&ndash;<b-row gutter="20" align="center">&ndash;&gt;-->
-          <!--&lt;!&ndash;<b-col>1</b-col>&ndash;&gt;-->
-          <!--&lt;!&ndash;<b-col>1</b-col>&ndash;&gt;-->
-          <!--&lt;!&ndash;<b-col>1</b-col>&ndash;&gt;-->
-        <!--&lt;!&ndash;</b-row>&ndash;&gt;-->
-      <!--&lt;!&ndash;</b-col>&ndash;&gt;-->
-    <!--&lt;!&ndash;</b-row>&ndash;&gt;-->
-    <!--&lt;!&ndash;<b-row gutter="20">&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="2" :xs="{span: 2}" :sm="{span: 10}">1</b-col>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="2" :xs="{span: 20}" :sm="{span: 4}">1</b-col>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="20" :xs="{span: 2}" :sm="{span: 10}">1</b-col>&ndash;&gt;-->
-    <!--&lt;!&ndash;</b-row>&ndash;&gt;-->
-    <!--<b-row>-->
-      <!--<b-col span="4" offset="4" :xs="{span: 24}" :sm="{span: 23, offset: 1}">1</b-col>-->
-      <!--<b-col span="6" :xs="{span: 24}" :sm="{span: 24}">1</b-col>-->
-      <!--<b-col span="10" :xs="{span: 10, offset: 14}" :sm="{span: 24}">1</b-col>-->
-    <!--</b-row>-->
-    <!--&lt;!&ndash;<b-row>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col>1</b-col>&ndash;&gt;-->
-    <!--&lt;!&ndash;</b-row>&ndash;&gt;-->
-    <!--&lt;!&ndash;<b-row gutter="20">&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="2">1</b-col>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="2">1</b-col>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="7">1</b-col>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="1">1</b-col>&ndash;&gt;-->
-      <!--&lt;!&ndash;<b-col span="10" offset="2">1</b-col>&ndash;&gt;-->
-    <!--&lt;!&ndash;</b-row>&ndash;&gt;-->
-  <!--</div>-->
-  <!--<div style="margin: 10px;">-->
-    <!--<b-input value="康康" disabled></b-input>-->
-    <!--<b-input value="jj" readonly></b-input>-->
-    <!--<b-input value="1223" error="急急急j 98796"></b-input>-->
-    <!--<b-input @change="aaa" @input="bbb" @focus="ccc" @blur="ddd"></b-input>-->
-    <!--<b-input v-model="val"></b-input>-->
-    <!--<p>{{val}}</p>-->
-  <!--</div>-->
-  <!--<div>-->
-    <!--<b-button icon="down">-->
-      <!--提交-->
-    <!--</b-button>-->
-    <!--<b-button icon="download" :loading="loading1" @click="loading1 = !loading1" icon-position="right">-->
-      <!--下载-->
-    <!--</b-button>-->
-    <!--<b-button>-->
-      <!--提交-->
-    <!--</b-button>-->
-    <!--<b-icon name="settings"></b-icon>-->
-    <!--<b-button-group>-->
-      <!--<b-button icon="left">上一页</b-button>-->
-      <!--<b-button>更多</b-button>-->
-      <!--<b-button icon="right" icon-position="right">下一页</b-button>-->
-    <!--</b-button-group>-->
-  <!--</div>-->
-  <div>
-    <b-layout style="height: 100vh;">
-      <b-sider>sider</b-sider>
-      <b-layout>
-        <b-header>header</b-header>
-        <b-content>content</b-content>
-        <b-footer>footer</b-footer>
-      </b-layout>
-    </b-layout>
-  </div>
+  <button @click="onToast">click me</button>
 </div>
 <script src="./src/app.js"></script>
 </body>
