--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body>
 <div id="app">
   <button @click="onToast">click me</button>
+  <b-button>546546</b-button>
 </div>
 <script src="./src/app.js"></script>
 </body>
