feat 完善 toast 组件动画

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </head>
 <body>
 <div id="app">
-  <button @click="onToast">click me</button>
+  <button @click="onToast">up</button>
+  <button @click="onToast2">middle</button>
+  <button @click="onToast3">down</button>
   <b-button>546546</b-button>
 </div>
 <script src="./src/app.js"></script>
