feat 添加 tabs tabs-body tabs-head tabs-item tabs-pane 组件 。

--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
 <div id="app">
   <b-tabs selected.sync="selectedTab">
     <b-tabs-head>
-      <template slot="actions">
-        <button>设置</button>
-      </template>
       <b-tabs-item>
-        <b-icon name="settings"></b-icon>item1
+        item1
       </b-tabs-item>
       <b-tabs-item>
         item2
