feat tabs 组件，添加 disabled 功能。

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <b-tabs-item name="item2">
         item2
       </b-tabs-item>
-      <b-tabs-item name="item3">
+      <b-tabs-item name="item3" disabled>
         item3
       </b-tabs-item>
     </b-tabs-head>
