--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
 <div id="app">
   <b-popover>
     <template slot="content">
-      <div></div>
+      <div>content</div>
     </template>
     <template>
       <button>click me</button>
+    </template>
+  </b-popover>
+  <b-popover>
+    <template slot="content">
+      <div>我是内容</div>
+    </template>
+    <template>
+      <button>点我</button>
     </template>
   </b-popover>
 </div>
