--- a/index.html
+++ b/index.html
@@ -27,22 +27,25 @@
 </head>
 <body>
 <div id="app">
-  <b-popover>
-    <template slot="content">
-      <div>content</div>
-    </template>
-    <template>
-      <button>click me</button>
-    </template>
-  </b-popover>
-  <b-popover>
-    <template slot="content">
-      <div>我是内容</div>
-    </template>
-    <template>
-      <button>点我</button>
-    </template>
-  </b-popover>
+  <div class="test" style="border: 1px solid gray; height: 500px;"></div>
+  <div style="overflow: hidden; height: 500px; margin: 100px 100px; border: 1px solid blue;">
+    <b-popover>
+      <template slot="content">
+        <div>content</div>
+      </template>
+      <template>
+        <button>click me</button>
+      </template>
+    </b-popover>
+    <b-popover>
+      <template slot="content">
+        <div>我是内容</div>
+      </template>
+      <template>
+        <button>点我</button>
+      </template>
+    </b-popover>
+  </div>
 </div>
 <script src="./src/app.js"></script>
 </body>
