fix popover 组件，修复点关闭冒泡到 body 的问题。

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 <body>
 <div id="app">
-  <div class="test" style="border: 1px solid gray; height: 500px;"></div>
-  <div style="overflow: hidden; height: 500px; margin: 100px 100px; border: 1px solid blue;">
+  <div style="height: 500px; margin: 100px 100px; border: 1px solid blue;"
+  @click="yyy">
     <b-popover>
       <template slot="content">
         <div>content</div>
