--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 </head>
 <body>
 <div id="app">
-  <div style="height: 500px; margin: 100px 100px; border: 1px solid blue;"
+  <div style="overflow: hidden; height: 500px; margin: 100px 100px;"
   @click="yyy">
     <b-popover>
       <template slot="content">
-        <div>content</div>
+        <div>contentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontent</div>
       </template>
       <template>
-        <button>click me</button>
+        <b-button>click me</b-button>
       </template>
     </b-popover>
     <b-popover>
@@ -42,7 +42,7 @@
         <div>我是内容</div>
       </template>
       <template>
-        <button>点我</button>
+        <b-button>点我</b-button>
       </template>
     </b-popover>
   </div>
