--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div id="app">
-  <div style="overflow: hidden; height: 500px; margin: 100px 100px;"
+  <div style=" height: 500px; margin: 100px 100px;"
   @click="yyy">
     <b-popover>
       <template slot="content">
@@ -37,12 +37,28 @@
         <b-button>click me</b-button>
       </template>
     </b-popover>
-    <b-popover>
+    <b-popover position="bottom">
       <template slot="content">
         <div>我是内容</div>
       </template>
       <template>
-        <b-button>点我</b-button>
+        <b-button>bottom</b-button>
+      </template>
+    </b-popover>
+    <b-popover position="left">
+      <template slot="content">
+        <div>left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left </div>
+      </template>
+      <template>
+        <b-button>left</b-button>
+      </template>
+    </b-popover>
+    <b-popover position="right">
+      <template slot="content">
+        <div>我是内容</div>
+      </template>
+      <template>
+        <b-button>right</b-button>
       </template>
     </b-popover>
   </div>
