feat popover 组件，添加 hover 触发方式。

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div id="app">
   <div style=" height: 500px; margin: 100px 100px;"
   @click="yyy">
-    <b-popover>
+    <b-popover trigger="hover">
       <template slot="content">
         <div>contentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontent</div>
       </template>
@@ -45,7 +45,7 @@
         <b-button>bottom</b-button>
       </template>
     </b-popover>
-    <b-popover position="left">
+    <b-popover position="left" trigger="hover">
       <template slot="content">
         <div>left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left left </div>
       </template>
