fix popover 组件，修复 hover 触发抖动的问题。

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <b-button>click me</b-button>
       </template>
     </b-popover>
-    <b-popover position="bottom">
+    <b-popover position="bottom" trigger="hover">
       <template slot="content">
         <div>我是内容</div>
       </template>
@@ -53,7 +53,7 @@
         <b-button>left</b-button>
       </template>
     </b-popover>
-    <b-popover position="right">
+    <b-popover position="right" trigger="hover">
       <template slot="content">
         <div>我是内容</div>
       </template>
