--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div id="app" style="padding: 100px;">
-  <b-collapse :selected.sync="selected">
+  <b-collapse :selected.sync="selected" accordion>
     <b-collapse-item title="title1" name="1">content1</b-collapse-item>
     <b-collapse-item title="title2" name="2">content2</b-collapse-item>
     <b-collapse-item title="title3" name="3">content3</b-collapse-item>
