fix 修改 button 组件，将 css 变量改为 scss 变量。

--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
       box-sizing: border-box;
     }
 
-    :root {
-      --border-color: #999;
-      --border-color-hover: #666;
-      --border-radius: 4px;
-      --color: #333;
-      --font-size: 14px;
-      --button-height: 32px;
-      --button-bg: #fff;
-      --button-active-bg: #eee;
-    }
   </style>
 </head>
 <body>
@@ -32,6 +22,7 @@
     <b-collapse-item title="title2" name="2">content2</b-collapse-item>
     <b-collapse-item title="title3" name="3">content3</b-collapse-item>
   </b-collapse>
+  <b-button>123</b-button>
   {{selected}}
 </div>
 <script src="./src/app.js"></script>
