--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body>
 <div id="app" style="padding: 100px;">
-  <b-cascader :source="source"></b-cascader>
+  111
+  <b-cascader :source="source" popover-height="200px"></b-cascader>
+  111
 </div>
 <script src="./src/app.js"></script>
 </body>
